<resources>
    <string name="app_name">CardGames</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Start Game</string>
    <string name="previous">Stop Game </string>

    <string name="hello_first_fragment">Doppelkopf starten </string>
    <string name="hello_second_fragment"> Start Projekt. Arg: %1$s</string>
    <string name="ui_attributes">ui_attributes</string>
    <string name="start">Start</string>
    <string name="playerleft">playerLeft</string>
    <string name="playertop">playertop</string>
    <string name="playerright">playerRight</string>
    <string name="humanPlayer">humanPlayer</string>
    <string name="start_timer">start_timer</string>
    <string name="pcPlayer">pcPlayer</string>

</resources>