<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:background="@drawable/ic_launcher_background"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context="MainActivity">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/playerone"
            android:layout_width="97dp"
            android:layout_height="74dp"
            android:layout_marginBottom="180dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/ui_attributes"
            android:src="@drawable/playerone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/playertwo"
            android:layout_width="84dp"
            android:layout_height="68dp"
            android:contentDescription="@string/ui_attributes"
            android:src="@drawable/playertwo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.274" />

        <ImageView
            android:id="@+id/playertree"
            android:layout_width="97dp"
            android:layout_height="77dp"
            android:layout_marginTop="52dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/ui_attributes"
            android:src="@drawable/playertree"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/playerfour"
            android:layout_width="86dp"
            android:layout_height="74dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/ui_attributes"
            android:src="@drawable/playerfour"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.275" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cardsLayout"
            android:layout_width="215dp"
            android:layout_height="306dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.535"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.486">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/PlayerTextLayot"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0">

                    <TextView
                        android:id="@+id/humanPlayer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="280dp"
                        android:layout_marginEnd="135dp"
                        android:layout_marginRight="135dp"
                        android:text="@string/humanPlayer"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/playerTop"
                        android:layout_width="70dp"
                        android:layout_height="23dp"
                        android:contentDescription="@string/playertop"
                        android:text="@string/playertop"
                        android:textColorLink="@color/purple_500"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.275" />

                    <TextView
                        android:id="@+id/playerLeft"
                        android:layout_width="79dp"
                        android:layout_height="17dp"
                        android:text="@string/playerleft"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.022"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.667" />

                    <TextView
                        android:id="@+id/playerRight"
                        android:layout_width="75dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="135dp"
                        android:layout_marginLeft="135dp"
                        android:text="@string/playerright"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/playerLeft"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.684" />

                    <Button
                        android:id="@+id/pcPlayer"
                        android:layout_width="116dp"
                        android:layout_height="36dp"
                        android:text="@string/pcPlayer"
                        android:textSize="12sp"
                        android:visibility="visible"
                        app:backgroundTint="#2196F3"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/card_top"
                android:layout_width="46dp"
                android:layout_height="77dp"
                android:layout_weight="1"
                android:contentDescription="@string/ui_attributes"
                android:scaleType="centerInside"
                android:src="@drawable/herzzehn"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/card_right"
                android:layout_width="43dp"
                android:layout_height="88dp"
                android:layout_weight="1"
                android:contentDescription="@string/ui_attributes"
                android:scaleType="centerInside"
                android:src="@drawable/herzass"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/card_left"
                android:layout_width="51dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:contentDescription="@string/ui_attributes"
                android:scaleType="centerInside"
                android:src="@drawable/karokonig"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/card_bottom"
                android:layout_width="48dp"
                android:layout_height="103dp"
                android:layout_weight="1"
                android:contentDescription="@string/ui_attributes"
                android:scaleType="centerInside"
                android:src="@drawable/kreuzass"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <TableLayout
            android:layout_width="322dp"
            android:layout_height="168dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/handCard_1"
                    android:layout_width="52dp"
                    android:layout_height="99dp"
                    android:contentDescription="@string/ui_attributes"
                    android:src="@drawable/herzass" />

                <ImageView
                    android:id="@+id/handCard_2"
                    android:layout_width="52dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/ui_attributes"
                    android:src="@drawable/herzass" />

                <ImageView
                    android:id="@+id/handCard_3"
                    android:layout_width="52dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/ui_attributes"
                    android:src="@drawable/herzass" />

                <ImageView
                    android:id="@+id/handCard_4"
                    android:layout_width="52dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/ui_attributes"
                    android:src="@drawable/herzass" />

                <ImageView
                    android:id="@+id/handCard_5"
                    android:layout_width="52dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/ui_attributes"
                    android:src="@drawable/herzass" />

                <ImageView
                    android:id="@+id/handCard_6"
                    android:layout_width="52dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/ui_attributes"
                    android:src="@drawable/herzass" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/handCard_7"
                    android:layout_width="52dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/ui_attributes"
                    android:src="@drawable/herzass" />

                <ImageView
                    android:id="@+id/handCard_8"
                    android:layout_width="52dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/ui_attributes"
                    android:src="@drawable/herzass" />

                <ImageView
                    android:id="@+id/handCard_9"
                    android:layout_width="52dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/ui_attributes"
                    android:src="@drawable/herzass" />

                <ImageView
                    android:id="@+id/handCard_10"
                    android:layout_width="52dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/ui_attributes"
                    android:src="@drawable/herzass" />

                <ImageView
                    android:id="@+id/handCard_11"
                    android:layout_width="52dp"
                    android:contentDescription="@string/ui_attributes"
                    android:src="@drawable/herzass" />

                <ImageView
                    android:id="@+id/handCard_12"
                    android:layout_width="52dp"
                    android:contentDescription="@string/ui_attributes"
                    android:src="@drawable/herzass" />

            </TableRow>

        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>